Adapt and fix in compatibility with GeoNature 2.5.0

--- a/frontend/app/components/observation/form/observation-form.component.scss
+++ b/frontend/app/components/observation/form/observation-form.component.scss
@@ -1,6 +1,9 @@
 #details {
     height: calc(100% - 40vh);
 }
+#detail-form {
+    overflow-y: auto;
+}
 
 :host ::ng-deep .card-header {
     padding: 6px 12px;
