--- a/frontend/app/components/individuals/form/individual-form.component.html
+++ b/frontend/app/components/individuals/form/individual-form.component.html
@@ -13,7 +13,7 @@
                         [formsDefinition]="individualFormDefinitions"
                     ></pnx-dynamic-form-generator>
 
-                    <div class="clearfix">
+                    <div class="clearfix mt-3">
                         <button class="btn btn-primary float-left" [routerLink]="['..']" *ngIf="!bEdit">Annuler</button>
                         <button class="btn btn-primary float-left" [routerLink]="['..', 'individual', individual.id_individual]" *ngIf="bEdit">Annuler</button>
                         <button *ngIf="!bChainInput" class="btn btn-success float-right" [disabled]="!individualForm.valid" (click)="onSubmit()"><i class="fa fa-check"></i>&nbsp;Valider</button>
