--- a/frontend/app/components/observation/form/observation-form.component.html
+++ b/frontend/app/components/observation/form/observation-form.component.html
@@ -27,7 +27,7 @@
             <pnx-map height="40vh" class="map-card">
             </pnx-map>
         </div>
-        <div class="cadre scroll">
+        <div id="detail-form" class="cadre scroll"  [style.max-height]="cardContentHeight + 'px'">
             <div class="">
                 <h3>Détails</h3>
             </div>
