Manage geometries: save in forms and show site groups on map

--- a/frontend/app/components/modules/home/module-home.component.html
+++ b/frontend/app/components/modules/home/module-home.component.html
@@ -2,11 +2,12 @@
     <div class="flex-container">
         <div class="cadre" [style.min-height]="cardContentHeight + 'px'" [style.max-height]="cardContentHeight + 'px'">
             <pnx-map height="100%" class="map-card">
-                <!--<pnx-leaflet-draw 
-                    [bEnable]="false"
-                    [geojson]="geometry" 
-                    [options]="leafletDrawOptions" >
-                </pnx-leaflet-draw>-->
+                <pnx-geojson
+                    *ngIf="mapFeatures && mapFeatures['features']"
+                    [geojson]="mapFeatures"
+                    [zoomOnLayer]="true"
+                    [zoomOnFirstTime]="true"
+                ></pnx-geojson>
             </pnx-map>
         </div>
         <div class="cadre scroll" [style.max-height]="cardContentHeight + 'px'" style="overflow-y:auto">
