Manage geometries: first interactions between map and table in module home

--- a/frontend/style.scss
+++ b/frontend/style.scss
@@ -41,3 +41,8 @@
 :host ::ng-deep pnx-observers .input-group {
     height: 31px;
 }
+
+/** tables **/
+:host /deep/ .datatable-body-row.active .datatable-row-group {
+    background-color: rgb(117, 227, 118) !important;
+}
