--- a/frontend/app/components/modules/home/module-home.component.html
+++ b/frontend/app/components/modules/home/module-home.component.html
@@ -54,7 +54,7 @@
                             <button disabled class="btn btn-primary float-right ml-2"><i class="fa fa-arrow-down"></i>&nbsp;Export</button>
                             <button disabled class="btn btn-primary float-right"><i class="fa fa-sliders"></i>&nbsp;Filtrer</button>
                         </div>
-                        <ngx-datatable #table
+                        <ngx-datatable #tableSitegroup
                             class="material striped margin-top-xs"
                             [rows]="sitegroups"
                             [rowHeight]="40"
@@ -62,7 +62,10 @@
                             [count]="sitegroups.length"
                             [limit]="15"
                             [headerHeight]="50"
-                            [footerHeight]="50">
+                            [footerHeight]="50"
+                            [selectionType]="'single'"
+                            [selected]="selected"
+                            (activate)="onSitegroupRowClick($event)">
 
                             <ngx-datatable-column width="60">
                                 <ng-template let-row="row" ngx-datatable-cell-template>
@@ -90,7 +93,7 @@
                             <button disabled class="btn btn-primary float-right ml-2"><i class="fa fa-arrow-down"></i>&nbsp;Export</button>
                             <button disabled class="btn btn-primary float-right"><i class="fa fa-sliders"></i>&nbsp;Filtrer</button>
                         </div>
-                        <ngx-datatable #table
+                        <ngx-datatable #tableSite
                             class="material striped margin-top-xs"
                             [rows]="sites"
                             [rowHeight]="40"
@@ -126,7 +129,7 @@
                             <button disabled class="btn btn-primary float-right ml-2"><i class="fa fa-arrow-down"></i>&nbsp;Export</button>
                             <button disabled class="btn btn-primary float-right"><i class="fa fa-sliders"></i>&nbsp;Filtrer</button>
                         </div>
-                        <ngx-datatable #table
+                        <ngx-datatable #tableIndividual
                             class="material striped margin-top-xs"
                             [rows]="individuals"
                             [rowHeight]="40"
