--- a/frontend/app/components/sitegroups/form/sitegroups-form.component.html
+++ b/frontend/app/components/sitegroups/form/sitegroups-form.component.html
@@ -3,7 +3,7 @@
         <div class="cadre" [style.min-height]="cardContentHeight + 'px'">
             <pnx-map height="100%" class="map-card">
                 <pnx-leaflet-draw 
-                    [geojson]="geometry" 
+                    [geojson]="mapFeature ? mapFeature.geometry : null" 
                     [options]="leafletDrawOptions" 
                     [zoomLevel]="14"
                     (layerDrawed)="setNewGeometry($event)">
