--- a/frontend/app/components/individuals/details/individual-details.component.html
+++ b/frontend/app/components/individuals/details/individual-details.component.html
@@ -19,7 +19,7 @@
             <nav>
                 <div class="nav nav-tabs" id="nav-tabs" role="tablist">
                     <a class="nav-item nav-link active" data-toggle="tab" aria-selected="true" id="nav-info-tab" href="#info-tab">Informations</a>
-                    <a class="nav-item nav-link" data-toggle="tab" aria-selected="true" id="nav-historic-tab" href="#historic-tab">Historique des actions<span class="badge badge-pill badge-primary ml-2">{{historic.length}}</span></a>
+                    <a class="nav-item nav-link" data-toggle="tab" aria-selected="true" id="nav-historic-tab" href="#historic-tab" (click)="refreshMapSize()">Historique des actions<span class="badge badge-pill badge-primary ml-2">{{historic.length}}</span></a>
                 </div>
                 <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade active show" id="info-tab" role="tabpanel" attr.aria-labelledby="nav-info-tab">
@@ -47,32 +47,43 @@
                     <div class="tab-pane fade" id="historic-tab" role="tabpanel" attr.aria-labelledby="nav-historic-tab">
                         <div class="flex-container">
                             <div class="">
-                                <ngx-datatable #table
-                                    class="material striped margin-top-xs"
-                                    [rows]="historic"
-                                    [rowHeight]="40"
-                                    [draggable]="false"
-                                    [count]="historic.length"
-                                    [limit]="15"
-                                    [headerHeight]="50"
-                                    [footerHeight]="50"
-                                    [sorts]="[{prop: 'visit_date',dir:'desc'}]">
-                                    
-                                    <ngx-datatable-column width="15">
-                                        <ng-template let-row="row" ngx-datatable-cell-template>
-                                            <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['../..','site', row.site_id, 'visit', row.id_visit, 'observation', row.id_observation]">
-                                                <i class="fa fa-info-circle" aria-hidden="true" matTooltip="Détails {{module.forms.observation.label}}"></i>
-                                            </a>
-                                        </ng-template>
-                                    </ngx-datatable-column>
-                                    <ngx-datatable-column width="200" *ngFor="let prop of historicListProperties" [name]="historicFieldsDef[prop].attribut_label" [prop]="prop" >
-                                        <ng-template let-row="row" ngx-datatable-cell-template>
-                                            <span>{{_dataService.formatProperty(row[prop], historicFieldsDef[prop])}}</span>
-                                        </ng-template>
-                                    </ngx-datatable-column>
-                                </ngx-datatable>
-                                <!--<pnx-map height="40vh" class="map-card">
-                                </pnx-map>-->
+                                <div class="details">
+                                    <ngx-datatable #tableHistoric
+                                        class="material striped margin-top-xs"
+                                        [rows]="historic"
+                                        [rowHeight]="40"
+                                        [draggable]="false"
+                                        [count]="historic.length"
+                                        [limit]="15"
+                                        [headerHeight]="50"
+                                        [footerHeight]="50"
+                                        [sorts]="[{prop: 'visit_date',dir:'desc'}]"
+                                        [selectionType]="'single'"
+                                        [selected]="selected"
+                                        (activate)="onHistoricRowClick($event)">
+                                        
+                                        <ngx-datatable-column width="15">
+                                            <ng-template let-row="row" ngx-datatable-cell-template>
+                                                <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['../..','site', row.site_id, 'visit', row.id_visit, 'observation', row.id_observation]">
+                                                    <i class="fa fa-info-circle" aria-hidden="true" matTooltip="Détails {{module.forms.observation.label}}"></i>
+                                                </a>
+                                            </ng-template>
+                                        </ngx-datatable-column>
+                                        <ngx-datatable-column width="200" *ngFor="let prop of historicListProperties" [name]="historicFieldsDef[prop].attribut_label" [prop]="prop" >
+                                            <ng-template let-row="row" ngx-datatable-cell-template>
+                                                <span>{{_dataService.formatProperty(row[prop], historicFieldsDef[prop])}}</span>
+                                            </ng-template>
+                                        </ngx-datatable-column>
+                                    </ngx-datatable>
+                                </div>
+                                <pnx-map height="40vh" class="map-card">
+                                    <pnx-geojson
+                                        *ngIf="mapFeatures && mapFeatures['features']"
+                                        [geojson]="mapFeatures"
+                                        [zoomOnLayer]="true"
+                                        [zoomOnFirstTime]="true"
+                                    ></pnx-geojson>
+                                </pnx-map>
                             </div>
                             <div class="">
                                 <h5>Détails</h5>
