Simplify model get by nesting object and simplify breadcrumbs

--- a/frontend/app/components/observation/form/observation-form.component.html
+++ b/frontend/app/components/observation/form/observation-form.component.html
@@ -8,7 +8,7 @@
                 </div>
                 <div class="">
                     <div class="mb-2">
-                        <span><strong>{{module.forms.site.label}}: </strong>{{site.name}}</span>
+                        <span><strong>{{module.forms.site.label}}: </strong>{{visit?.site.name}}</span>
                     </div>
                     <div class="mb-2">
                         <span><strong>{{module.forms.visit.label}}: </strong>{{_dataService.formatProperty(visit.date, module.forms.visit.fields['date'])}}</span>
