--- a/frontend/app/components/individuals/details/individual-details.component.html
+++ b/frontend/app/components/individuals/details/individual-details.component.html
@@ -64,7 +64,7 @@
                                         
                                         <ngx-datatable-column width="15">
                                             <ng-template let-row="row" ngx-datatable-cell-template>
-                                                <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['../..','site', row.site_id, 'visit', row.id_visit, 'observation', row.id_observation]">
+                                                <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['../..','site', row.visit.id_site, 'visit', row.id_visit, 'observation', row.id_observation]">
                                                     <i class="fa fa-info-circle" aria-hidden="true" matTooltip="Détails {{module.forms.observation.label}}"></i>
                                                 </a>
                                             </ng-template>
