--- a/frontend/app/components/observation/details/observation-details.component.html
+++ b/frontend/app/components/observation/details/observation-details.component.html
@@ -9,17 +9,17 @@
                 </div>
                 <div class="">
                     <div class="mb-2">
-                        <span><strong>{{module.forms.site.label}}: </strong>{{site.name}}</span>
+                        <span><strong>{{module.forms.site.label}}: </strong>{{observation?.visit?.site?.name}}</span>
                     </div>
                     <div class="mb-2">
-                        <span><strong>{{module.forms.visit.label}}: </strong>{{_dataService.formatProperty(visit.date, module.forms.visit.fields['date'])}}</span>
+                        <span><strong>{{module.forms.visit.label}}: </strong>{{_dataService.formatProperty(observation?.visit?.date, module.forms.visit.fields['date'])}}</span>
                     </div>
                     <div class="mb-2">
                         <strong>{{module.forms.individual.label}}:</strong>
                         <table class="table table-striped table-sm scrollable">
                             <tr *ngFor="let fieldName of individualProperties">
                                 <th>{{ individualFields[fieldName].attribut_label }}</th>
-                                <td class="text-in-area">{{ _dataService.formatProperty(individual[fieldName], individualFields[fieldName])}}</td>
+                                <td class="text-in-area">{{ _dataService.formatProperty(observation?.individual[fieldName], individualFields[fieldName])}}</td>
                             </tr>
                         </table>
                     </div>
