--- a/frontend/style.scss
+++ b/frontend/style.scss
@@ -46,3 +46,7 @@
 :host /deep/ .datatable-body-row.active .datatable-row-group {
     background-color: rgb(117, 227, 118) !important;
 }
+
+:host ::ng-deep .map-popup p {
+    font-size: 16px;
+}
