Manage map: display objects in details and forms, regroup methods in abstract class and update style

--- a/frontend/app/components/observation/form/observation-form.component.html
+++ b/frontend/app/components/observation/form/observation-form.component.html
@@ -25,6 +25,12 @@
                 </div>
             </div>
             <pnx-map height="40vh" class="map-card">
+                <pnx-geojson
+                    *ngIf="mapFeatures && mapFeatures['features']"
+                    [geojson]="mapFeatures"
+                    [zoomOnLayer]="true"
+                    [zoomOnFirstTime]="true"
+                ></pnx-geojson>
             </pnx-map>
         </div>
         <div id="detail-form" class="cadre scroll"  [style.max-height]="cardContentHeight + 'px'">
