--- a/frontend/app/components/observation/details/observation-details.component.html
+++ b/frontend/app/components/observation/details/observation-details.component.html
@@ -26,6 +26,12 @@
                 </div>
             </div>
             <pnx-map height="40vh" class="map-card">
+                <pnx-geojson
+                    *ngIf="mapFeatures && mapFeatures['features']"
+                    [geojson]="mapFeatures"
+                    [zoomOnLayer]="true"
+                    [zoomOnFirstTime]="true"
+                ></pnx-geojson>
             </pnx-map>
         </div>
         <div id="details-left" class="cadre scroll" [style.max-height]="cardContentHeight + 'px'">
