Manage map: add control on site creation if site is within sitegroup

--- a/frontend/app/components/sites/form/site-form.component.html
+++ b/frontend/app/components/sites/form/site-form.component.html
@@ -1,5 +1,11 @@
 <div class="main">
     <div class="flex-container">
+      <div id="waiting-panel" *ngIf="waitControl">
+        <div>
+          <i class="fa fa-refresh fa-spin fa-3x"></i>
+          <p>Contrôles en cours...</p>
+        </div>
+      </div>
         <div class="cadre" [style.min-height]="cardContentHeight + 'px'">
             <pnx-map height="100%" class="map-card">
                 <pnx-leaflet-draw 
