--- a/frontend/app/components/individuals/form/individual-form.component.html
+++ b/frontend/app/components/individuals/form/individual-form.component.html
@@ -16,7 +16,9 @@
                     <div class="clearfix mt-3">
                         <button class="btn btn-primary float-left" [routerLink]="['..']" *ngIf="!bEdit">Annuler</button>
                         <button class="btn btn-primary float-left" [routerLink]="['..', 'individual', individual.id_individual]" *ngIf="bEdit">Annuler</button>
-                        <button *ngIf="!bChainInput" class="btn btn-success float-right" [disabled]="!individualForm.valid" (click)="onSubmit()"><i class="fa fa-check"></i>&nbsp;Valider</button>
+                        <button *ngIf="!bChainInput" class="btn btn-success float-right" [disabled]="!individualForm.valid || bSaving" (click)="onSubmit()">
+                            <i class="fa fa-check" *ngIf="!bSaving"></i>
+                            <i class="fa fa-spinner fa-spin" *ngIf="bSaving"></i>&nbsp;Valider</button>
                     </div>
                 </form>
             </div>
