--- a/frontend/app/components/sitegroups/form/sitegroups-form.component.html
+++ b/frontend/app/components/sitegroups/form/sitegroups-form.component.html
@@ -35,9 +35,15 @@
               <div class="clearfix mt-3">
                 <button class="btn btn-primary float-left" [routerLink]="['..']" *ngIf="!bEdit">Annuler</button>
                 <button class="btn btn-primary float-left" [routerLink]="['..' , 'sitegroup', sitegroup.id_sitegroup]" *ngIf="bEdit">Annuler</button>
-                <button *ngIf="!bChainInput  && !bEdit" class="btn btn-success float-right" [disabled]="!sitegroupForm.valid" (click)="onSubmit(true)"><i class="fa fa-check"></i>&nbsp;Valider et ajouter {{module.forms.site.label}}</button>
-                <button *ngIf="!bChainInput" class="btn btn-success float-right mr-2" [disabled]="!sitegroupForm.valid" (click)="onSubmit(false)"><i class="fa fa-check"></i>&nbsp;Valider</button>
-                <button *ngIf="bChainInput" class="btn btn-success float-right" [disabled]="!sitegroupForm.valid" (click)="onSubmit(false)"><i class="fa fa-check"></i>&nbsp;Valider et enchainer les saisies</button>
+                <button *ngIf="!bChainInput  && !bEdit" class="btn btn-success float-right" [disabled]="!sitegroupForm.valid || bSaving" (click)="onSubmit(true)">
+                  <i *ngIf="!bSaving" class="fa fa-check"></i>
+                  <i *ngIf="bSaving" class="fa fa-spinner fa-spin"></i>&nbsp;Valider et ajouter {{module.forms.site.label}}</button>
+                <button *ngIf="!bChainInput" class="btn btn-success float-right mr-2" [disabled]="!sitegroupForm.valid || bSaving" (click)="onSubmit(false)">
+                  <i *ngIf="!bSaving" class="fa fa-check"></i>
+                  <i *ngIf="bSaving" class="fa fa-spinner fa-spin"></i>&nbsp;Valider</button>
+                <button *ngIf="bChainInput" class="btn btn-success float-right" [disabled]="!sitegroupForm.valid || bSaving" (click)="onSubmit(false)">
+                  <i *ngIf="!bSaving" class="fa fa-check"></i>
+                  <i *ngIf="bSaving" class="fa fa-spinner fa-spin"></i>&nbsp;Valider et enchainer les saisies</button>
               </div>
       
             </form>
