--- a/frontend/app/components/visits/form/visit-form.component.html
+++ b/frontend/app/components/visits/form/visit-form.component.html
@@ -42,9 +42,15 @@
               <div class="clearfix mt-3">
                 <button class="btn btn-primary float-left" [routerLink]="['..']" *ngIf="!bEdit">Annuler</button>
                 <button class="btn btn-primary float-left" [routerLink]="[visit.id_visit]" *ngIf="bEdit">Annuler</button>
-                <button *ngIf="!bChainInput  && !bEdit" class="btn btn-success float-right ml-2" [disabled]="!visitForm.valid || !genericVisitForm.valid || !visitForm.get('observation').value" (click)="onSubmit(true)"><i class="fa fa-check"></i>&nbsp;Valider et ajouter {{module.forms.observation.label}}</button>
-                <button *ngIf="!bChainInput" class="btn btn-success float-right" [disabled]="!visitForm.valid || !genericVisitForm.valid" (click)="onSubmit()"><i class="fa fa-check"></i>&nbsp;Valider</button>
-                <button *ngIf="bChainInput && !bEdit" class="btn btn-success float-right" [disabled]="!visitForm.valid || !genericVisitForm.valid" (click)="onSubmit()"><i class="fa fa-check"></i>&nbsp;Valider et enchainer les saisies</button>
+                <button *ngIf="!bChainInput  && !bEdit" class="btn btn-success float-right ml-2" [disabled]="!visitForm.valid || !genericVisitForm.valid || !visitForm.get('observation').value || bSaving" (click)="onSubmit(true)">
+                  <i class="fa fa-check" *ngIf="!bSaving"></i>
+                  <i class="fa fa-spinner fa-spin" *ngIf="bSaving"></i>&nbsp;Valider et ajouter {{module.forms.observation.label}}</button>
+                <button *ngIf="!bChainInput" class="btn btn-success float-right" [disabled]="!visitForm.valid || !genericVisitForm.valid || bSaving" (click)="onSubmit()">
+                  <i class="fa fa-check" *ngIf="!bSaving"></i>
+                  <i class="fa fa-spinner fa-spin" *ngIf="bSaving"></i>&nbsp;Valider</button>
+                <button *ngIf="bChainInput && !bEdit" class="btn btn-success float-right" [disabled]="!visitForm.valid || !genericVisitForm.valid || bSaving" (click)="onSubmit()">
+                  <i class="fa fa-check" *ngIf="!bSaving"></i>
+                  <i class="fa fa-spinner fa-spin" *ngIf="bSaving"></i>&nbsp;Valider et enchainer les saisies</button>
               </div>
             </form>
         </div> 
