--- a/frontend/app/components/observation/details/observation-details.component.html
+++ b/frontend/app/components/observation/details/observation-details.component.html
@@ -63,6 +63,28 @@
                         </table>
                     </div>
                 </div>
+                <ng-container *ngFor="let media of medias; index as i">
+                    <div class="medias-tab">
+                      <div [matTooltip]="ms.toString(media)">
+                        <a [href]="ms.href(media)" target="_blank">{{ media.title_fr }}</a>
+                        <i>
+                          ({{ ms.typeMedia(media)
+                          }}<span *ngIf="media.author"> par {{ media.author }}</span
+                          >)
+                        </i>
+                      </div>
+                      <p *ngIf="media.description_fr">{{media.description_fr}}</p>
+                      <div>
+                        <pnx-display-medias
+                          [medias]="medias"
+                          [index]="i"
+                          display="medium"
+                          diaporama="true"
+                        >
+                        </pnx-display-medias>
+                      </div>
+                    </div>
+                  </ng-container>
             </div>
         </div>
     </div>
