--- a/frontend/app/components/sitegroups/details/sitegroups-details.component.html
+++ b/frontend/app/components/sitegroups/details/sitegroups-details.component.html
@@ -37,28 +37,7 @@
                                 id="media-tab"
                                 role="tabpanel"
                                 attr.aria-labelledby="nav-media-tab">
-                                <ng-container *ngFor="let media of medias; index as i">
-                                    <div class="medias-tab">
-                                      <div [matTooltip]="ms.toString(media)">
-                                        <a [href]="ms.href(media)" target="_blank">{{ media.title_fr }}</a>
-                                        <i>
-                                          ({{ ms.typeMedia(media)
-                                          }}<span *ngIf="media.author"> par {{ media.author }}</span
-                                          >)
-                                        </i>
-                                      </div>
-                                      <p *ngIf="media.description_fr">{{media.description_fr}}</p>
-                                      <div>
-                                        <pnx-display-medias
-                                          [medias]="medias"
-                                          [index]="i"
-                                          display="medium"
-                                          diaporama="true"
-                                        >
-                                        </pnx-display-medias>
-                                      </div>
-                                    </div>
-                                  </ng-container>
+                                <gn-cmr-media-list [medias]="medias"></gn-cmr-media-list>
                             </div>
                         </div>
                     </nav>
