--- a/frontend/app/components/modules/home/module-home.component.html
+++ b/frontend/app/components/modules/home/module-home.component.html
@@ -112,7 +112,12 @@
                             [headerHeight]="50"
                             [footerHeight]="50">
 
-                            <ngx-datatable-column width="60">
+                            <ngx-datatable-column width="20" headerClass="col-warning" cellClass="col-warning">
+                                <ng-template let-row="row" ngx-datatable-cell-template>
+                                    <i class="fa fa-warning text-warning" aria-hidden="true" [matTooltip]="'Cette visite devrait avoir au moins 1 observation'" *ngIf="row.observation === true && row.nb_observations == 0"></i>
+                                </ng-template>
+                            </ngx-datatable-column>
+                            <ngx-datatable-column width="45" headerClass="col-action" cellClass="col-action">
                                 <ng-template let-row="row" ngx-datatable-cell-template>
                                     <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['site', row.id_site]">
                                         <i class="fa fa-info-circle" aria-hidden="true" [matTooltip]="'Informations ' + module.forms.site.label + ' ' + row.name"></i>
