--- a/frontend/app/components/sitegroups/details/sitegroups-details.component.html
+++ b/frontend/app/components/sitegroups/details/sitegroups-details.component.html
@@ -76,7 +76,12 @@
                             [selected]="selected"
                             (activate)="onSiteRowClick($event)">
 
-                            <ngx-datatable-column width="60">
+                            <ngx-datatable-column width="20" headerClass="col-warning" cellClass="col-warning">
+                                <ng-template let-row="row" ngx-datatable-cell-template>
+                                    <i class="fa fa-warning text-warning" aria-hidden="true" [matTooltip]="'Il manque au moins 1 observation pour au moins 1 visite'" *ngIf="row.missing_observation"></i>
+                                </ng-template>
+                            </ngx-datatable-column>
+                            <ngx-datatable-column width="45" headerClass="col-action" cellClass="col-action">
                                 <ng-template let-row="row" ngx-datatable-cell-template>
                                     <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['site', row.id_site]">
                                         <i class="fa fa-info-circle" aria-hidden="true" [matTooltip]="'Informations ' + module.forms.site.label + ' ' + row.name"></i>
