--- a/frontend/app/components/sites/details/site-details.component.html
+++ b/frontend/app/components/sites/details/site-details.component.html
@@ -67,7 +67,12 @@
                             [footerHeight]="50"
                             [sorts]="[{prop: 'date', dir:'desc'}]">
 
-                            <ngx-datatable-column width="60">
+                            <ngx-datatable-column width="20" headerClass="col-warning" cellClass="col-warning">
+                                <ng-template let-row="row" ngx-datatable-cell-template>
+                                    <i class="fa fa-warning text-warning" aria-hidden="true" [matTooltip]="'Cette visite devrait avoir au moins 1 observation'" *ngIf="row.observation === true && row.nb_observations == 0"></i>
+                                </ng-template>
+                            </ngx-datatable-column>
+                            <ngx-datatable-column width="45" headerClass="col-action" cellClass="col-action">
                                 <ng-template let-row="row" ngx-datatable-cell-template>
                                     <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['visit', row.id_visit]">
                                         <i class="fa fa-info-circle" aria-hidden="true" [matTooltip]="'Informations ' + module.forms.visit.label"></i>
@@ -98,7 +103,7 @@
                             [headerHeight]="50"
                             [footerHeight]="50">
 
-                            <ngx-datatable-column width="60">
+                            <ngx-datatable-column width="25" headerClass="col-action" cellClass="col-action">
                                 <ng-template let-row="row" ngx-datatable-cell-template>
                                     <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="[(site.id_sitegroup? '../../../..' : '../..'),'individual', row.id_individual]">
                                         <i class="fa fa-info-circle" aria-hidden="true" [matTooltip]="'Informations ' + module.forms.individual.label + ' ' + row.identifier"></i>
