--- a/frontend/style.scss
+++ b/frontend/style.scss
@@ -50,3 +50,13 @@
 :host ::ng-deep .map-popup p {
     font-size: 16px;
 }
+
+:host /deep/ .col-warning {
+    padding-left: 5px !important;
+    padding-right: 5px !important;
+}
+
+:host /deep/ .col-action {
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+}
