--- a/frontend/app/components/individuals/details/individual-details.component.html
+++ b/frontend/app/components/individuals/details/individual-details.component.html
@@ -84,9 +84,9 @@
                                                 </a>
                                             </ng-template>
                                         </ngx-datatable-column>
-                                        <ngx-datatable-column width="200" *ngFor="let prop of historicListProperties" [name]="historicFieldsDef[prop].attribut_label" [prop]="prop" >
+                                        <ngx-datatable-column *ngFor="let prop of historicListProperties" [width]="prop.width" [name]="historicFieldsDef[prop.field].attribut_label" [prop]="prop.field" >
                                             <ng-template let-row="row" ngx-datatable-cell-template>
-                                                <span>{{_dataService.formatProperty(row[prop], historicFieldsDef[prop])}}</span>
+                                                <span>{{_dataService.formatProperty(row[prop.field], historicFieldsDef[prop.field])}}</span>
                                             </ng-template>
                                         </ngx-datatable-column>
                                     </ngx-datatable>
