--- a/frontend/app/components/sitegroups/details/sitegroups-details.component.html
+++ b/frontend/app/components/sitegroups/details/sitegroups-details.component.html
@@ -91,7 +91,10 @@
                                     </a>
                                 </ng-template>
                             </ngx-datatable-column>
-                            <ngx-datatable-column width="150" *ngFor="let prop of siteListProperties" [name]="siteFieldsDef[prop].attribut_label" [prop]="prop" >
+                            <ngx-datatable-column *ngFor="let prop of siteListProperties" [width]="prop.width" [name]="siteFieldsDef[prop.field].attribut_label" [prop]="prop.field" >
+                                <ng-template let-row="row" ngx-datatable-cell-template>
+                                    <span>{{_dataService.formatProperty(row[prop.field], siteFieldsDef[prop.field])}}</span>
+                                </ng-template>
                             </ngx-datatable-column>
                         </ngx-datatable>
                     </div>
@@ -129,7 +132,10 @@
                                     </a>
                                 </ng-template>
                             </ngx-datatable-column>
-                            <ngx-datatable-column width="150" *ngFor="let prop of individualListProperties" [name]="individualFieldsDef[prop].attribut_label" [prop]="prop" >
+                            <ngx-datatable-column *ngFor="let prop of individualListProperties" [width]="prop.width" [name]="individualFieldsDef[prop.field].attribut_label" [prop]="prop.field" >
+                                <ng-template let-row="row" ngx-datatable-cell-template>
+                                    <span>{{_dataService.formatProperty(row[prop.field], individualFieldsDef[prop.field])}}</span>
+                                </ng-template>
                             </ngx-datatable-column>
                         </ngx-datatable>
                     </div>
