--- a/frontend/app/components/sites/details/site-details.component.html
+++ b/frontend/app/components/sites/details/site-details.component.html
@@ -82,9 +82,9 @@
                                     </a>
                                 </ng-template>
                             </ngx-datatable-column>
-                            <ngx-datatable-column width="200" *ngFor="let prop of visitListProperties" [name]="visitFieldsDef[prop].attribut_label" [prop]="prop" >
+                            <ngx-datatable-column *ngFor="let prop of visitListProperties" [width]="prop.width" [name]="visitFieldsDef[prop.field].attribut_label" [prop]="prop.field" >
                                 <ng-template let-row="row" ngx-datatable-cell-template>
-                                    <span>{{_dataService.formatProperty(row[prop], visitFieldsDef[prop])}}</span>
+                                    <span>{{_dataService.formatProperty(row[prop.field], visitFieldsDef[prop.field])}}</span>
                                 </ng-template>
                             </ngx-datatable-column>
                         </ngx-datatable>
@@ -113,7 +113,10 @@
                                     </a>
                                 </ng-template>
                             </ngx-datatable-column>
-                            <ngx-datatable-column width="150" *ngFor="let prop of individualListProperties" [name]="individualFieldsDef[prop].attribut_label" [prop]="prop" >
+                            <ngx-datatable-column *ngFor="let prop of individualListProperties" [width]="prop.width" [name]="individualFieldsDef[prop.field].attribut_label" [prop]="prop.field" >
+                                <ng-template let-row="row" ngx-datatable-cell-template>
+                                    <span>{{_dataService.formatProperty(row[prop.field], individualFieldsDef[prop.field])}}</span>
+                                </ng-template>
                             </ngx-datatable-column>
                         </ngx-datatable>
                     </div>
