--- a/frontend/app/components/visits/details/visit-details.component.html
+++ b/frontend/app/components/visits/details/visit-details.component.html
@@ -54,9 +54,9 @@
                             </a>
                         </ng-template>
                     </ngx-datatable-column>
-                    <ngx-datatable-column width="200" *ngFor="let prop of observationListProperties" [name]="observationFieldsDef[prop].attribut_label" [prop]="prop" >
+                    <ngx-datatable-column *ngFor="let prop of observationListProperties" [width]="prop.width" [name]="observationFieldsDef[prop.field].attribut_label" [prop]="prop.field" >
                         <ng-template let-row="row" ngx-datatable-cell-template>
-                            <span>{{_dataService.formatProperty(row[prop], observationFieldsDef[prop])}}</span>
+                            <span>{{_dataService.formatProperty(row[prop.field], observationFieldsDef[prop.field])}}</span>
                         </ng-template>
                     </ngx-datatable-column>
                 </ngx-datatable>
