--- a/frontend/app/components/common/filter/filter.component.scss
+++ b/frontend/app/components/common/filter/filter.component.scss
@@ -5,3 +5,11 @@
     padding: 10px;
 
 }
+
+select {
+    height: calc(1.5em + .5rem + 2px);
+    padding: .25rem .5rem;
+    font-size: .875rem;
+    line-height: 1.5;
+    border-radius: .2rem;
+}
